Connect django-rest-passwordreset

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ environs[django]==9.3.2
 djangorestframework==3.15.1
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
+django-rest-passwordreset==1.4.1
 drf-yasg==1.21.7
 beautifulsoup4==4.12.3
 lxml==5.2.1
